Fixed wrong scrollbar (on body). Updated to scroll to top when click on Translate lyrics button.

--- a/render/less/views/lyric.less
+++ b/render/less/views/lyric.less
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .eight-pt {
     font-size: 8pt;
 }
@@ -65,7 +69,7 @@
 .header {
     position: relative;
     overflow: hidden;
-    min-height: 8rem;
+    min-height: 10rem;
     box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
 
     &::before {
@@ -119,11 +123,6 @@
     }
 }
 
-.lyrics-right {
-    width: 100%;
-    position: relative;
-}
-
 .lyrics-left {
     white-space: pre-wrap;
     flex: 1;
@@ -133,7 +132,7 @@
     position: relative;
     user-select: all;
     float: left;
-    width: 100%;
+    width: 90%;
 
     &:first-letter {
         text-transform: capitalize;
